{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Touch",
            "id": "ac58f217-5455-4d0f-8012-171cfe6c9250",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "6676aff3-ff4d-4b84-b8c4-e36432d37723",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchDelta",
                    "type": "PassThrough",
                    "id": "a79e729c-e2ca-4ae0-ae13-85407674093c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "82a51be0-b531-4f00-9ff3-60c4412ebea7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6b0f847b-d3d3-4d66-9164-7950ea7680d3",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0643bd0b-6145-44bb-a521-96595623d42d",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0659dfef-36ce-4ae3-9840-7a08bad4ffc8",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}